Prevented scrollbars on code blocks

--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -22,11 +22,6 @@ ol ol {
   padding-left: 3rem;
 }
 
-ul ul,
-ul ol {
-  list-style: square;
-}
-
 li {
   margin-bottom: .5rem;
 }
