--- a/_sass/utils/_mixins.scss
+++ b/_sass/utils/_mixins.scss
@@ -1,7 +1,7 @@
 /// Define the element as a container
 /// @author Hugo Giraudel
 @mixin container {
-  max-width: 720px;
+  max-width: 730px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 1rem;
